tests/baselines/reference/unusedFunctionsinNamespaces5.errors.txt
tests/cases/compiler/unusedFunctionsinNamespaces5.ts(10,14): error TS6133: Variable 'function3' has never been used.
tests/cases/compiler/unusedFunctionsinNamespaces5.ts(14,14): error TS6133: Variable 'function4' has never been used.


==== tests/cases/compiler/unusedFunctionsinNamespaces5.ts (2 errors) ====
    
    namespace Validation {
        var function1 = function() {
        }
    
        export function function2() {
    
        }
    
        function function3() {
                 ~~~~~~~~~
!!! error TS6133: Variable 'function3' has never been used.
            function1();
        }
    
        function function4() {
                 ~~~~~~~~~
!!! error TS6133: Variable 'function4' has never been used.
    
        }
    }